--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
                 <artifactId>flyway-core</artifactId>
                 <version>6.5.7</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>30.1.1-jre</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
